ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Critical - P2
    • 2.6.1, 2.7.0
    • Affects Version/s: None
    • Component/s: Replication
    • None
    • ALL
    • Hide

      e.g. in indexbg_drop.js, the drop doesn't actually take effect on the secondary. The drop command fails but we fail to notice the problem due to SERVER-13601

      Show
      e.g. in indexbg_drop.js, the drop doesn't actually take effect on the secondary. The drop command fails but we fail to notice the problem due to SERVER-13601
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Issue Status as of April 22, 2014

      ISSUE SUMMARY
      Data definition commands, like creating or dropping databases, collections or indexes, will fail on a secondary if that secondary has a background index build in progress on the same collection.

      USER IMPACT
      The failure is silent and can lead to inconsistency between replica set members.

      WORKAROUNDS
      Building the index in the foreground avoids the issue. If users rely on background index builds, they should confirm that all index builds have completed before running any data definition commands.

      RESOLUTION
      The secondaries wait to apply the data definition commands if a background index build is in progress.

      AFFECTED VERSIONS
      Version 2.6.0 is affected by this bug.

      PATCHES
      The patch is included in the 2.6.1 production release.

            Assignee:
            Andy Schwerin (Inactive)
            Reporter:
            Eric Milkie
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: