SERVER-13620 Refactor background.h/cpp; add awaitNoBgOp methods.

(cherry picked from commit 9ad97ac9fd08cf56d4e6c4bdb5c1b10085b9040c)